[frontend] Fix "An unhandled error has occurred." being unreadable

--- a/Iceshrimp.Frontend/wwwroot/css/app.css
+++ b/Iceshrimp.Frontend/wwwroot/css/app.css
@@ -151,6 +151,7 @@ textarea {
 #blazor-error-ui {
     display: none;
     background: lightyellow;
+    color: black;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     left: 0;
